# amqp2http

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  REUSE.toml  docker-compose.yml  pyproject.toml
amqp2http/: __init__.py  config.py  dispatch.py  main.py
tests/: __init__.py  conftest.py  fixtures.py  test_config.py  test_dispatch_amqp_message.py  test_integration.py  test_root_endpoint.py
tests/utils/: amqp_helpers.py
